Upgrade Java from 17 to 21 and modernize code with latest language features (#10)
* Initial plan for issue

* Initial plan: Java version upgrade from 17 to 21 with code modernization