@@ -57,10 +57,15 @@ public class RateLimitInterceptor implements HandlerInterceptor {
 		if (isRateLimited(tracker)) {
 			response.setStatus(429); // Too Many Requests
 			response.setContentType("application/json");
-			response.getWriter()
-				.write(String.format(
-						"{\"error\":\"Rate limit exceeded. Try again later.\",\"maxRequests\":%d,\"windowSizeMinutes\":%d}",
-						maxRequests, windowSizeMinutes));
+
+			String jsonResponse = """
+					{
+						"error": "Rate limit exceeded. Try again later.",
+						"maxRequests": %d,
+						"windowSizeMinutes": %d
+					}""".formatted(maxRequests, windowSizeMinutes);
+
+			response.getWriter().write(jsonResponse);
 			return false;
 		}
 
@@ -90,11 +95,7 @@ public class RateLimitInterceptor implements HandlerInterceptor {
 		}
 
 		String xRealIP = request.getHeader("X-Real-IP");
-		if (xRealIP != null && !xRealIP.isEmpty()) {
-			return xRealIP;
-		}
-
-		return request.getRemoteAddr();
+		return (xRealIP != null && !xRealIP.isEmpty()) ? xRealIP : request.getRemoteAddr();
 	}
 
 	private static class RequestTracker {
